# M3P2-LABinventory-BackEnd-Squad1

./: .env_example  .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requeriments.txt  requirements.txt
.github/workflows/: dockerhub.yml  pytest.yml  test.yml
src/: __init__.py  config.py
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: employees.py  employers.py  inventory.py  user.py
src/app/database/: client_secret.json  roles.json  seeds.py
src/app/middlewares/: auth.py
src/app/models/: employees.py  employers.py  items.py  roles.py  users.py
src/app/routes/: __init__.py
src/app/services/: database.py  employees.py  employers.py  inventory.py  oauth2_services.py  users_services.py
src/app/swagger/: __init__.py
src/app/utils/: __init__.py
src/app/validators/: __init__.py
tests/: conftest.py  test_app.py  test_create_user.py  test_employees.py  test_employers.py  test_inventory.py  test_login_user.py  teste_login_user.py
tests/employers/: test_get_employers.py
